Correct markdown mistakes

--- a/jupyter_notebooks/01-DataCollection.ipynb
+++ b/jupyter_notebooks/01-DataCollection.ipynb
@@ -24,7 +24,7 @@
         "## Inputs\n",
         "\n",
         "* Kaggle JSON file - the authentication token.\n",
-        "* Downloaded the recommended house price dataset posted by Code Institute on Kaggle.\n",
+        "* Downloaded the Student Performance Data Set by Data-Science Sean on Kaggle.\n",
         "\n",
         "## Outputs\n",
         "\n",
