Update README file

--- a/jupyter_notebooks/01-DataCollection.ipynb
+++ b/jupyter_notebooks/01-DataCollection.ipynb
@@ -291,30 +291,30 @@
         "6. **Pstatus** -\n",
         "parent's cohabitation status (binary: 'T' - living together or 'A' - apart)\n",
         "\n",
-        "7. **Medu** - mother's education (numeric: 0 - none, 1 - primary education (4th grade), 2 â€“ 5th to 9th grade, 3 â€“ secondary education or 4 â€“ higher education)\n",
+        "1. **Medu** - mother's education (numeric: 0 = none, 1 = primary education (4th grade), 2 = 5th to 9th grade, 3 = secondary education or 4 = higher education)\n",
         "\n",
-        "8. **Fedu** -\n",
-        "father's education (numeric: 0 - none, 1 - primary education (4th grade), 2 â€“ 5th to 9th grade, 3 â€“ secondary education or 4 â€“ higher education)\n",
+        "2. **Fedu** -\n",
+        "father's education (numeric: 0 = none, 1 = primary education (4th grade), 2 = 5th to 9th grade, 3 = secondary education or 4 = higher education)\n",
         "\n",
-        "9. **Mjob** -\n",
+        "1. **Mjob** -\n",
         "mother's job (nominal: 'teacher', 'health' care related, civil 'services' (e.g. administrative or police), 'at_home' or 'other')\n",
         "\n",
-        "10. **Fjob** -\n",
+        "1.  **Fjob** -\n",
         "father's job (nominal: 'teacher', 'health' care related, civil 'services' (e.g. administrative or police), 'at_home' or 'other')\n",
         "\n",
         "11.  **reason** -\n",
         "reason to choose this school (nominal: close to 'home', school 'reputation', 'course' preference or 'other')\n",
         "\n",
-        "12.  **guardian** -\n",
+        "1.   **guardian** -\n",
         "student's guardian (nominal: 'mother', 'father' or 'other')\n",
         "\n",
-        "13.  **traveltime** -\n",
+        "1.   **traveltime** -\n",
         "home to school travel time (numeric: 1 - <15 min., 2 - 15 to 30 min., 3 - 30 min. to 1 hour, or 4 - >1 hour)\n",
         "\n",
-        "14.  **studytime** -\n",
+        "1.   **studytime** -\n",
         "weekly study time (numeric: 1 - <2 hours, 2 - 2 to 5 hours, 3 - 5 to 10 hours, or 4 - >10 hours)\n",
         "\n",
-        "15.  **failures** -\n",
+        "1.   **failures** -\n",
         "number of past class failures (numeric: n if 1<=n<3, else 4)\n",
         "\n",
         "16.  **schoolsup** -\n",
@@ -323,52 +323,52 @@
         "17.  **famsup** -\n",
         "family educational support (binary: yes or no)\n",
         "\n",
-        "18.  **paid** -\n",
+        "1.   **paid** -\n",
         "extra paid classes within the course subject (Math or Portuguese) (binary: yes or no)\n",
         "\n",
-        "19.  **activities** -\n",
+        "1.   **activities** -\n",
         "extra-curricular activities (binary: yes or no)\n",
         "\n",
-        "20.  **nursery** -\n",
+        "1.   **nursery** -\n",
         "attended nursery school (binary: yes or no)\n",
         "\n",
-        "21.  **higher** -\n",
+        "1.   **higher** -\n",
         "wants to take higher education (binary: yes or no)\n",
         "\n",
-        "22.  **internet** -\n",
+        "1.   **internet** -\n",
         "Internet access at home (binary: yes or no)\n",
         "\n",
-        "23.  **romantic** -\n",
+        "1.   **romantic** -\n",
         "with a romantic relationship (binary: yes or no)\n",
         "\n",
-        "24.  **famrel** -\n",
+        "1.   **famrel** -\n",
         "quality of family relationships (numeric: from 1 - very bad to 5 - excellent)\n",
         "\n",
-        "25.  **freetime** -\n",
+        "1.   **freetime** -\n",
         "free time after school (numeric: from 1 - very low to 5 - very high)\n",
         "\n",
-        "26.  **goout** -\n",
+        "1.   **goout** -\n",
         "going out with friends (numeric: from 1 - very low to 5 - very high)\n",
         "\n",
-        "27.  **Dalc** -\n",
+        "1.   **Dalc** -\n",
         "workday alcohol consumption (numeric: from 1 - very low to 5 - very high)\n",
         "\n",
-        "28.  **Walc** -\n",
+        "1.   **Walc** -\n",
         "weekend alcohol consumption (numeric: from 1 - very low to 5 - very high)\n",
         "\n",
-        "29.  **health** -\n",
+        "1.   **health** -\n",
         "current health status (numeric: from 1 - very bad to 5 - very good)\n",
         "\n",
-        "30.  **absences** -\n",
+        "1.   **absences** -\n",
         "number of school absences (numeric: from 0 to 93)\n",
         "\n",
-        "31.  **G1** -\n",
+        "1.   **G1** -\n",
         "first period grade (numeric: from 0 to 20)\n",
         "\n",
-        "32.  **G2** -\n",
+        "1.   **G2** -\n",
         "second period grade (numeric: from 0 to 20)\n",
         "\n",
-        "33.  **G3** -\n",
+        "1.   **G3** -\n",
         "final grade (numeric: from 0 to 20, output target)"
       ]
     },
