--- a/jupyter_notebooks/02-Final Grade Study.ipynb
+++ b/jupyter_notebooks/02-Final Grade Study.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **Data Collection Notebook**"
+        "# **Final Academic Grade Study Notebook**"
       ]
     },
     {
@@ -17,26 +17,16 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Fetch data from Kaggle and save it as raw data.\n",
-        "* Inspect the data and save it under outputs/datasets/collection\n",
-        "* Push the files to the github repository.\n",
+        "* Answer the business requirement 1 : Understand which factors most influence students' academic performance.\n",
+        "  - The client expects to explore correlations and patterns between variables such as parental education, study time, relationship status, internet access family support, and other lifestyle indicators, with the final academic grade (G3)\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Kaggle JSON file - the authentication token.\n",
-        "* Downloaded the recommended house price dataset posted by Code Institute on Kaggle.\n",
+        "* Generate Dataset: outputs/datasets/collection/student-por.csv\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* The Kaggle files were unzipped to:\n",
-        "    - inputs/datasets/raw/\n",
-        "    - inputs/datasets/raw/\n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* This notebook was written based on the guidelines provided in the walkthrough project 2: 'Churnometer'.\n",
-        "* This notebook relates to the Data Understanding step of Crisp-DM methodology.\n",
-        "* This notebook and the following will represent the learning outcome after following the Code Institute - Predictive Analytics and Machine Learning module.\n"
+        "* Generate code that answers business requirement 1 and can be used to build the Streamlit App\n"
       ]
     },
     {
@@ -140,14 +130,7 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Fetch data from Kaggle\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Install Kaggle library with the below command:"
+        "# Load Data\n"
       ]
     },
     {
@@ -156,72 +139,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "! pip install kaggle"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* A kaggle account will be required at this point as if the user is doesn't have an account Kaggle will not allow the usage of data.\n",
-        "    - If an account has been created, then the user can download a kaggle.json file.\n",
-        "* The Kaggle.json file contains an authentication token, which is required in order to authenticate a data download from Kaggle.\n",
-        "* The Kaggle.json token file must then be copied to the root directory of the project repository.\n",
-        "* Next, the user must set the Kaggle environment variable and set permission to the toke file to read write for the user."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "os.environ['KAGGLE_CONFIG_DIR'] = os.getcwd()\n",
-        "! chmod 600 kaggle.json"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "We are using the following dataset - [Student Academic Performance Dataset](https://www.kaggle.com/datasets/larsen0966/student-performance-data-set)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* Get the dataset path from the kaggle url.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "KaggleDatasetPath = \"larsen0966/student-performance-data-set\"\n",
-        "DestinationFolder = \"inputs/datasets/raw\"   \n",
-        "! kaggle datasets download -d {KaggleDatasetPath} -p {DestinationFolder}"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* The dataset has been downloaded into a zip file which will need to be unzipped to be used.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "! unzip {DestinationFolder}/*.zip -d {DestinationFolder} \\\n",
-        "    && rm {DestinationFolder}/*.zip \\\n",
-        "    && rm kaggle.json"
+        "import pandas as pd\n",
+        "df = pd.read_csv('outputs/datasets/collection/student-por.csv')\n",
+        "df.head()"
       ]
     },
     {
@@ -239,7 +159,14 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "# Load and Inspect Kaggle Data"
+        "# Data Exploration"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Since we have loaded the data, we are interested to get more familiar with the dataset, check variable type and distribution, missing levels and what these variables mean in a business context."
       ]
     },
     {
@@ -248,128 +175,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import pandas as pd\n",
-        "df = pd.read_csv(f\"inputs/datasets/raw/student-por.csv\")\n",
-        "df.head()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df.info()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* **Abbreviations explained:**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "1. **school** - \n",
-        "    student's school (binary: 'GP' - Gabriel Pereira or 'MS' - Mousinho da Silveira)\n",
-        "\n",
-        "2. **sex** -\n",
-        "    student's sex (binary: 'F' - female or 'M' - male)\n",
-        "\n",
-        "3. **age** -\n",
-        "    student's age (numeric: from 15 to 22)\n",
-        "\n",
-        "4. **address** -\n",
-        "    student's home address type (binary: 'U' - urban or 'R' - rural)\n",
-        "\n",
-        "5. **famsize** -\n",
-        "    family size (binary: 'LE3' - less or equal to 3 or 'GT3' - greater than 3)\n",
-        "\n",
-        "6. **Pstatus** -\n",
-        "parent's cohabitation status (binary: 'T' - living together or 'A' - apart)\n",
-        "\n",
-        "7. **Medu** - mother's education (numeric: 0 - none, 1 - primary education (4th grade), 2 â€“ 5th to 9th grade, 3 â€“ secondary education or 4 â€“ higher education)\n",
-        "\n",
-        "8. **Fedu** -\n",
-        "father's education (numeric: 0 - none, 1 - primary education (4th grade), 2 â€“ 5th to 9th grade, 3 â€“ secondary education or 4 â€“ higher education)\n",
-        "\n",
-        "9. **Mjob** -\n",
-        "mother's job (nominal: 'teacher', 'health' care related, civil 'services' (e.g. administrative or police), 'at_home' or 'other')\n",
-        "\n",
-        "10. **Fjob** -\n",
-        "father's job (nominal: 'teacher', 'health' care related, civil 'services' (e.g. administrative or police), 'at_home' or 'other')\n",
-        "\n",
-        "11.  **reason** -\n",
-        "reason to choose this school (nominal: close to 'home', school 'reputation', 'course' preference or 'other')\n",
-        "\n",
-        "12.  **guardian** -\n",
-        "student's guardian (nominal: 'mother', 'father' or 'other')\n",
-        "\n",
-        "13.  **traveltime** -\n",
-        "home to school travel time (numeric: 1 - <15 min., 2 - 15 to 30 min., 3 - 30 min. to 1 hour, or 4 - >1 hour)\n",
-        "\n",
-        "14.  **studytime** -\n",
-        "weekly study time (numeric: 1 - <2 hours, 2 - 2 to 5 hours, 3 - 5 to 10 hours, or 4 - >10 hours)\n",
-        "\n",
-        "15.  **failures** -\n",
-        "number of past class failures (numeric: n if 1<=n<3, else 4)\n",
-        "\n",
-        "16.  **schoolsup** -\n",
-        "extra educational support (binary: yes or no)\n",
-        "\n",
-        "17.  **famsup** -\n",
-        "family educational support (binary: yes or no)\n",
-        "\n",
-        "18.  **paid** -\n",
-        "extra paid classes within the course subject (Math or Portuguese) (binary: yes or no)\n",
-        "\n",
-        "19.  **activities** -\n",
-        "extra-curricular activities (binary: yes or no)\n",
-        "\n",
-        "20.  **nursery** -\n",
-        "attended nursery school (binary: yes or no)\n",
-        "\n",
-        "21.  **higher** -\n",
-        "wants to take higher education (binary: yes or no)\n",
-        "\n",
-        "22.  **internet** -\n",
-        "Internet access at home (binary: yes or no)\n",
-        "\n",
-        "23.  **romantic** -\n",
-        "with a romantic relationship (binary: yes or no)\n",
-        "\n",
-        "24.  **famrel** -\n",
-        "quality of family relationships (numeric: from 1 - very bad to 5 - excellent)\n",
-        "\n",
-        "25.  **freetime** -\n",
-        "free time after school (numeric: from 1 - very low to 5 - very high)\n",
-        "\n",
-        "26.  **goout** -\n",
-        "going out with friends (numeric: from 1 - very low to 5 - very high)\n",
-        "\n",
-        "27.  **Dalc** -\n",
-        "workday alcohol consumption (numeric: from 1 - very low to 5 - very high)\n",
-        "\n",
-        "28.  **Walc** -\n",
-        "weekend alcohol consumption (numeric: from 1 - very low to 5 - very high)\n",
-        "\n",
-        "29.  **health** -\n",
-        "current health status (numeric: from 1 - very bad to 5 - very good)\n",
-        "\n",
-        "30.  **absences** -\n",
-        "number of school absences (numeric: from 0 to 93)\n",
-        "\n",
-        "31.  **G1** -\n",
-        "first period grade (numeric: from 0 to 20)\n",
-        "\n",
-        "32.  **G2** -\n",
-        "second period grade (numeric: from 0 to 20)\n",
-        "\n",
-        "33.  **G3** -\n",
-        "final grade (numeric: from 0 to 20, output target)"
+        "from ydata_profiling import ProfileReport\n",
+        "pandas_report = ProfileReport(df=df, minimal=True)\n",
+        "pandas_report.to_notebook_iframe()"
       ]
     },
     {
@@ -381,29 +189,203 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ltNetd085qHf"
-      },
+      "metadata": {},
       "source": [
-        "# Push files to Repo"
+        "## Correlation Study"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Prearson and Spearman correlation study methods require numerical values. It seems from the dataset overview that a lot of the variables are categorical which will be ignored during the study. We will do one-hot encoding hence turning the categorical values to numeric inputs."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "aKlnIozA4eQO",
-        "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "import os\n",
-        "try:\n",
-        "  os.makedirs(name='outputs/datasets/collection') # create outputs/datasets/collection folder\n",
-        "except Exception as e:\n",
-        "  print(e)\n",
+        "from feature_engine.encoding import OneHotEncoder\n",
+        "encoder = OneHotEncoder(variables=df.columns[df.dtypes=='object'].to_list(), drop_last=True)\n",
+        "df_ohe = encoder.fit_transform(df)\n",
+        "print(df_ohe.shape)\n",
+        "df_ohe.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* This method split the binary variables into two new variables e.g. `paid_no` & `paid_yes`\n",
+        "* After a preamptive correlation run, we saw that `higher_yes` and `higher_no` are reciprocal variables which can inflate our correlation list without adding any new information.\n",
+        "* We are setting `drop_last` to true so that such variables that are dummies are dropped."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We use `.corr() `for spearman and pearson methods, and investigate the correlations to the target variable `G3`.\n",
+        "- We know this command returns a pandas series and the first item is the correlation between `G3` and `G3`, which happens to be 1, so we exclude that with [1:]\n",
+        "- We sort values considering the aboslute value, by setting key=abs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "corr_spearman = df_ohe.corr(method='spearman')['G3'].sort_values(key=abs, ascending=False)[1:]\n",
+        "corr_spearman.head(10)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We do the same for pearson"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "corr_pearson = df_ohe.corr(method='pearson')['G3'].sort_values(key=abs, ascending=False)[1:]\n",
+        "corr_pearson.head(10)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "From the above methods:\n",
+        "* `G2`(Second period grade) and `G1`(First period grade) are highly correlated (strong positive) with our target variable: `G3`(Final grade).\n",
+        "  \n",
+        "* `failures`(Number of past class failures) and `higher_yes`(Plans for higher education) are low - moderately correlated (one of them being moderate negative).\n",
+        "  \n",
+        "* `school_GP` shows positive correlation which might lead us to believe Gabriel Pereira to be a better environment academically for the students.\n",
+        "  \n",
+        "* We also see that `Dalc`(Workday alcohol consumption) and `Walc`(Weekend alcohol consumption) negatively imapacts the final grade.\n",
+        "  \n",
+        "* Overall, for both methods, we notice strong, weak or moderate levels (positive or negative), of correlation between `G3` and a given variable."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Ideally, we pursue strong correlation levels. However, this is not always possible.\n",
+        "* We will consider the top 5 correlation levels at df_ohe and will study the associated variables at df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "top_n = 6\n",
+        "set(corr_pearson[:top_n].index.to_list() + corr_spearman[:top_n].index.to_list())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* This gives us a list of five variables - 'G1', 'G2', 'failures', 'higher_yes', 'school_GP'.\n",
+        "* These 6 variables will be tested on strength to predicting the Final Grade `G3`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "vars_to_study = ['G1', 'G2', 'failures', 'higher_yes', 'school_GP', 'studytime']\n",
+        "vars_to_study"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## EDA on selected variables"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_eda = df_ohe.filter(vars_to_study + ['G3'])\n",
+        "df_eda.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We plot the distribution:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%matplotlib inline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "sns.set_style('whitegrid')\n",
         "\n",
-        "df.to_csv(f\"outputs/datasets/collection/student-por.csv\",index=False)"
+        "\n",
+        "def plot_categorical(df, col, target_var):\n",
+        "\n",
+        "    plt.figure(figsize=(12, 5))\n",
+        "    sns.countplot(data=df, x=col, hue=target_var, order=df[col].value_counts().index)\n",
+        "    plt.xticks(rotation=90)\n",
+        "    plt.title(f\"{col}\", fontsize=20, y=1.05)\n",
+        "    plt.show()\n",
+        "\n",
+        "\n",
+        "def plot_numerical(df, col, target_var):\n",
+        "    plt.figure(figsize=(8, 5))\n",
+        "    sns.histplot(data=df, x=col, hue=target_var, kde=True, element=\"step\")\n",
+        "    plt.title(f\"{col}\", fontsize=20, y=1.05)\n",
+        "    plt.show()\n",
+        "\n",
+        "\n",
+        "target_var = 'G3'\n",
+        "for col in vars_to_study:\n",
+        "    if df_eda[col].dtype == 'object':\n",
+        "        plot_categorical(df_eda, col, target_var)\n",
+        "        print(\"\\n\\n\")\n",
+        "    else:\n",
+        "        plot_numerical(df_eda, col, target_var)\n",
+        "        print(\"\\n\\n\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
       ]
     }
   ],
